<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PertenecerEquipoActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="152dp" />

    <LinearLayout
        android:layout_width="319dp"
        android:layout_height="447dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/tvNombreTorneo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_torneo_name" />

        <TextView
            android:id="@+id/tvNombreEquipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_eq_names" />

        <TextView
            android:id="@+id/tvCategoriaFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_eq_categoryEquipo" />

        <EditText
            android:id="@+id/etNumeroCamiseta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/app_eq_nro_camiseta"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/app_btnGuardar"
            android:textAllCaps="false"
            android:textColor="@color/letrasBoton" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>