<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UsuarioLogueadoActivity"
    android:id="@+id/rootview">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="269dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="pulpoLogin"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusableInTouchMode="true"
        android:src="@drawable/pulpologo" >
        <requestFocus />
    </ImageView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <Button
            android:id="@+id/btnCrearT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/app_btnIngresarT"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/letrasBoton"
            android:textSize="18sp"
            android:visibility="visible" />
        <Button
            android:id="@+id/btnCrearEq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/app_btnCrearE"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/letrasBoton"
            android:textSize="18sp"
            android:visibility="visible" />
        <Button
            android:id="@+id/btnCrearJu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/app_btnCrearJ"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/letrasBoton"
            android:textSize="18sp"
            android:visibility="visible" />
        <Button
            android:id="@+id/btnCrearP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/app_btnCrearP"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/letrasBoton"
            android:textSize="18sp"
            android:visibility="visible" />
        <Button
            android:id="@+id/btnVerListaT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/app_btnVerListaT"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/letrasBoton"
            android:textSize="18sp"
            android:visibility="visible" />


    </LinearLayout>




</android.support.constraint.ConstraintLayout>